[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khatulaltair"
version = "0.1.0"
description = "Bibliothèque personnelle de visualisations Altair stylées pour le data storytelling"
authors = [
    { name="TonNom" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "altair",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]
