[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khatulaltair"
version = "0.2.0"
description = "Personal styled visualization library built on top of Matplotlib"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
